# ChestBuddy

./: .coverage  .gitignore  Makefile  README.md  batch_test_output.txt  config.ini  git_commit.diff  h buddy master  how HEAD  how head --oneline  import_export_test_output.txt  log.txt  main.py  phase3_test_results.txt  pyproject.toml  pytest.ini  setup.py  ter  test.csv  test_output.txt  test_output2.txt  test_output_detailed.txt  test_output_fixed.txt
chestbuddy/: __init__.py  __main__.py  app.py  config.ini  debugging.py  main.py
chestbuddy_demo/: config.ini
data/: autosave.csv
docs/: UI design.md  UI-example.html  code_redundancy_analysis.md
memory-bank/: activeContext.md  activeContext.md.bak  activeContext.md.new  bugfixing.mdc  codebase_cleanup.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  test_execution_examples.md  test_update_plan.md  testing.md  ui-ux.md
plans/: 01_signal_connection_management.md  02_ui_update_interface.md  controller-refactoring-progress.md  correction_feature_conversation_summary.md  correction_feature_refactoring_plan.md  correction_feature_ui_mockup.html  correction_feature_ui_mockup.md  correction_system_conversation_summary.md  correction_system_improvements_plan.md  correction_system_technical_implementation.md  correction_ui_mockup.md  data_state_tracking_implementation.md  implementation_roadmap.md  table_state_manager_implementation_plan.md  test_completion_plan.md
scripts/: README.md  analyze_data_view_update.py  chest_buddy_signal_tracing.py  debug_data_view_display.py  (+19 more)
(+434 files in other folders)
