[project]
name = "chestbuddy"
version = "0.1.0"
description = "A chest tracking and data analysis tool for Total Battle."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.5.0",
    "numpy>=1.25.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "matplotlib>=3.7.0",
    "jinja2>=3.1.0",
    "ftfy>=6.1.0",
    "charset-normalizer>=3.0.0",
    "unidecode>=1.3.0",
    "chardet>=5.2.0",
    "pytest-qt>=4.4.0",
    "pytest-mock>=3.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.0.240",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=42.0.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "YTT", "ANN", "B", "A", "COM", "C4", "DTZ", "T10", "TD", "PYI"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[project.scripts]
chestbuddy = "chestbuddy.main:main"
